[package]
name = "pget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
docopt = "1.1.0"
indicatif = "0.17.0"
tokio={version="1",features=["full","tracing"]}
tokio-util={version="0.7",features=["full"]}
once_cell="1.5"
futures = {version = "0.3",features = ["thread-pool"]}

[dev-dependencies]
sha2 = "0.10.0"
digest = "0.10.0"
hex = "0.4"
num_cpus="1"