[package]
name = "pget"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Used to solve the network instability issues encountered during large file downloads, supporting resumable downloads and concurrent downloads."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
indicatif = "0.17.0"
tokio={version="1",features=["full","tracing"]}
tokio-util={version="0.7",features=["full"]}
futures = {version = "0.3",features = ["thread-pool"]}

[dev-dependencies]
sha2 = "0.10.0"
digest = "0.10.0"
hex = "0.4"
num_cpus="1"
[features]
progress_bar=[]